# agents-course-gaia-challenge

./: .gitignore  README.md  pyproject.toml  workflow.html
results/: gemini-2.0-flash.json  gemini-2.5-flash-preview-04-17.json  gemini-2.5-pro-preview-03-25.json
results/gemini-2.0-flash/: 1f975693-876d-457b-a649-393859e79bf3.json  305ac316-eef6-4446-960a-92d80d542f82.json  3cef3a44-215e-4aed-8e3b-b1e3f08063b7.json  3f57289b-8c60-48be-bd80-01f8099ca449.json  7bd855d8-463d-4ed5-93ca-5fe35145f733.json  840bfca7-4f7b-481a-8794-c560c340185d.json  99c9cc74-fdc8-46c6-8f8d-3ce2d3bfeea3.json  a0c07678-e491-4bbc-8f0b-07405144218f.json  a1e91b78-d3d8-4675-bb8d-62741b4b68a6.json  cabe07ed-9eca-40ea-8ead-410ef5e83f91.json  cca530fc-4052-43b2-b130-b30968d8aa44.json  cf106601-ab4f-4af9-b045-5295fe67b37d.json
results/gemini-2.0-flash-lite/: 305ac316-eef6-4446-960a-92d80d542f82.json  3cef3a44-215e-4aed-8e3b-b1e3f08063b7.json  4fc2f1ae-8625-45b5-ab34-ad4433bc21f8.json  8e867cd7-cff9-4e6c-867a-ff5ddc2550be.json  99c9cc74-fdc8-46c6-8f8d-3ce2d3bfeea3.json  9d191bce-651d-4746-be2d-7ef8ecadb9c2.json  a1e91b78-d3d8-4675-bb8d-62741b4b68a6.json  cabe07ed-9eca-40ea-8ead-410ef5e83f91.json  cca530fc-4052-43b2-b130-b30968d8aa44.json
results/gemini-2.5-flash-preview-04-17/: 1f975693-876d-457b-a649-393859e79bf3.json  3cef3a44-215e-4aed-8e3b-b1e3f08063b7.json  3f57289b-8c60-48be-bd80-01f8099ca449.json  7bd855d8-463d-4ed5-93ca-5fe35145f733.json  99c9cc74-fdc8-46c6-8f8d-3ce2d3bfeea3.json  bda648d7-d618-4883-88f4-3466eabd860e.json  (+2 more)
src/: main.py  models.py  settings.py  tools.py  workflow.py
(+17 files in other folders)
